dist_man1_MANS=

if BUILD_SYSCOIND
  dist_man1_MANS+=virclesd.1
endif

if ENABLE_QT
  dist_man1_MANS+=vircles-qt.1
endif

if BUILD_SYSCOIN_CLI
  dist_man1_MANS+=vircles-cli.1
endif

if BUILD_SYSCOIN_TX
  dist_man1_MANS+=vircles-tx.1
endif

if ENABLE_WALLET
if BUILD_SYSCOIN_WALLET
  dist_man1_MANS+=vircles-wallet.1
endif
endif
